# scotty-url-shortener

./: .gitignore  README.md  shortener.cabal  stack.yaml
.github/workflows/: haskell.yml
migrations/: 001_add_url_table.sql  002_add_new_field_to_represent_redirect_link.sql  003_add_date_of_creation_to_url.sql
src/: Shortener.hs
test/: ShortenerSpec.hs
