cabal-version: 2.2

name: shortener
version: 0.1.0.0

common common
  build-depends:
    , base >= 4.18
  default-language: Haskell2010
  ghc-options: -Wall

library
  import: common
  hs-source-dirs: src
  exposed-modules: Shortener
  build-depends:
    , blaze-html >= 0.9 && < 0.10
    , containers
    , scotty >= 0.20.1 && < 0.21
    , text
    , dotenv
    , http-types
    , network-uri
    , digestive-functors == 0.8.4.2
    , postgresql-simple

executable shortener
  import: common
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    , shortener